# mnist-1lnn

./: 1lnn.c  1lnn.h  CMakeLists.txt  README.md  main.c  makefile
util/: mnist-utils.c
